# QuantityCalculator

./: README.md  TEST.py  pyproject.toml
Calculator/: CONSTANTS.py  Commenting.py  Datum.py  SETTINGS.py  __init__.py
Calculator/Computations/: Assumption.py  Calculator.py  Formula.py  LinearIterator.py  __init__.py
Calculator/ConsoleUI/: Comments.py
Calculator/Storage/: Assumptions  CONSTANTS.py  Defaults  FileChangers.py  FileParser.py  Formulas  Names  Units  __init__.py
Calculator/Storage/_ParserFiles/: Instructions
Calculator/Utils/: Files.py  __init__.py
QCalculator/: Assumption.py  Commenting.py  Datum.py  Formula.py  LinearIterator.py  SETTINGS.py  __init__.py  _settings.py  database.py
QCalculator/Computations/: Assumption.py  Datum.py  Formula.py  LinearIterator.py  __init__.py
QCalculator/Exceptions/: DatumExceptions.py  FormulaExceptions.py  LinearIteratorExceptions.py  __init__.py
QCalculator/Storage/: CONSTANTS.py  FileChangers.py  Files.py  __init__.py
tests/: test_Datum.py  test_Formula.py  test_LinearIterator.py
