[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "QuantityCalculator"
version = "0.1.0"
requires-python = ">= 3.12"
authors = [
    { name = "Antons Kutuzovs", email = "akutuzovsssss@gmail.com" }
]
description = "A package to iteratively solve a system of arbitrary linear equations."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["calculator", "quantity", "units"]

dependencies = [
    "pint",
    "sympy"
]

[project.urls]
Homepage = "https://github.com/AntonKutuzov/QuantityCalculator"
